--- a/deprecated_alternatives/index_v0.html
+++ b/deprecated_alternatives/index_v0.html
@@ -2,183 +2,274 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Microorganism Classifier</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ML Demo Hub</title>
+
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+
     <style>
+        /* ===== BASE ===== */
         body {
-            font-family: 'Roboto', sans-serif;
-            background: #f0f2f5;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding: 50px;
             margin: 0;
+            font-family: "Inter", sans-serif;
+            background: linear-gradient(135deg, #0f172a, #1e293b);
+            background-size: 400% 400%;
+            animation: gradientShift 14s ease infinite;
+            color: #e2e8f0;
+            overflow-x: hidden;
         }
 
-        h1 {
-            color: #333;
-            margin-bottom: 10px;
-        }
-
-        p.subtitle {
-            color: #666;
-            margin-bottom: 40px;
-        }
-
-        #dropZone {
-            width: 300px;
-            height: 300px;
-            border: 3px dashed #bbb;
-            border-radius: 10px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: #bbb;
-            cursor: pointer;
-            transition: border-color 0.2s, color 0.2s;
-            background: #fff;
-        }
-
-        #dropZone.hover {
-            border-color: #3b82f6;
-            color: #3b82f6;
-        }
-
-        #dropZone img {
-            max-width: 100%;
-            max-height: 100%;
-            border-radius: 10px;
-        }
-
-        #result {
-            margin-top: 30px;
-            width: 400px;
-        }
-
-        .bar-container {
-            margin-bottom: 10px;
-        }
-
-        .bar-label {
-            font-weight: bold;
-            margin-bottom: 3px;
-        }
-
-        .bar {
-            height: 20px;
-            background: #3b82f6;
-            border-radius: 5px;
-            transition: width 0.5s;
-        }
-
-        #spinner {
-            display: none;
-            margin-top: 20px;
-            border: 5px solid #f3f3f3;
-            border-top: 5px solid #3b82f6;
-            border-radius: 50%;
-            width: 50px;
-            height: 50px;
-            animation: spin 1s linear infinite;
-        }
-
-        @keyframes spin {
+        @keyframes gradientShift {
             0% {
-                transform: rotate(0deg);
+                background-position: 0% 0%;
+            }
+
+            50% {
+                background-position: 100% 100%;
             }
 
             100% {
-                transform: rotate(360deg);
+                background-position: 0% 0%;
             }
+        }
+
+        /* ===== HEADER WITH CLEAN ANIMATION ===== */
+        /* HEADER */
+        .site-header {
+            padding: 45px 60px 28px;
+            text-align: center;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.08);
+            backdrop-filter: blur(10px);
+            background: rgba(15, 23, 42, 0.45);
+            position: sticky;
+            top: 0;
+            z-index: 100;
+            opacity: 0;
+            transform: translateY(-35px);
+            animation: headerEnter 0.9s ease-out forwards;
+        }
+
+        @keyframes headerEnter {
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        .site-title {
+            margin: 0;
+            font-size: 2.85rem;
+            font-weight: 600;
+            color: #fff;
+            display: inline-block;
+            padding-bottom: 6px;
+            position: relative;
+        }
+
+        /* Underline grows on hover */
+        .site-title::after {
+            content: "";
+            position: absolute;
+            left: 50%;
+            bottom: 0;
+            width: 0%;
+            height: 3px;
+            background: linear-gradient(90deg, #60a5fa, #3b82f6);
+            border-radius: 4px;
+            transition: width .45s ease, left .45s ease;
+        }
+
+        .site-header:hover .site-title::after {
+            width: 60%;
+            left: 20%;
+        }
+
+        /* Soft subtle glow that doesn't hide the header */
+        @keyframes headerGlow {
+            0% {
+                box-shadow: 0 0 0px rgba(59, 130, 246, 0.0);
+            }
+
+            100% {
+                box-shadow: 0 0 22px rgba(59, 130, 246, 0.22);
+            }
+        }
+
+        .site-header {
+            animation: headerGlow 14s ease-in-out infinite alternate, headerEnter 0.9s ease-out forwards;
+        }
+
+
+
+
+        /* ===== CARD GRID ===== */
+        .grid {
+            max-width: 1200px;
+            margin: 80px auto 40px;
+            padding: 0 50px;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 50px;
+        }
+
+        .card {
+            background: rgba(255, 255, 255, 0.06);
+            padding: 36px;
+            border-radius: 16px;
+            text-align: center;
+            border: 1px solid rgba(255, 255, 255, 0.12);
+            opacity: 0;
+            transform: translateY(35px);
+            transition: opacity .8s ease, transform .8s ease;
+        }
+
+        .card.visible {
+            opacity: 1;
+            transform: translateY(0);
+        }
+
+        .card:hover {
+            transform: translateY(-12px) scale(1.03);
+            box-shadow: 0 18px 45px rgba(0, 0, 0, 0.45);
+        }
+
+        /* Card Text */
+        .card h2 {
+            margin-bottom: 12px;
+            font-size: 1.5rem;
+            color: #fff;
+        }
+
+        .card p {
+            opacity: .85;
+            margin-bottom: 26px;
+            line-height: 1.45;
+        }
+
+        /* Buttons */
+        .button {
+            display: inline-block;
+            padding: 14px 26px;
+            background: linear-gradient(135deg, #3b82f6, #60a5fa);
+            color: white;
+            text-decoration: none;
+            border-radius: 8px;
+            font-size: 1.05rem;
+            font-weight: 600;
+            transition: transform .25s, box-shadow .25s;
+        }
+
+        .button:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 10px 22px rgba(59, 130, 246, .45);
+        }
+
+        /* ===== INFO SECTIONS ===== */
+        .section {
+            max-width: 900px;
+            margin: 80px auto;
+            padding: 0 40px;
+            text-align: center;
+            opacity: 0;
+            transform: translateY(40px);
+            transition: 0.9s ease;
+        }
+
+        .section.visible {
+            opacity: 1;
+            transform: translateY(0);
+        }
+
+        .section h3 {
+            font-size: 2rem;
+            margin-bottom: 14px;
+        }
+
+        .section p,
+        .section ul {
+            opacity: .85;
+            line-height: 1.6;
+            font-size: 1.05rem;
+        }
+
+        ul {
+            list-style: none;
+            padding: 0;
+        }
+
+        ul li {
+            margin: 8px 0;
         }
     </style>
 </head>
 
 <body>
 
-    <h1>Microorganism Classifier</h1>
-    <p class="subtitle">Upload an image to classify it into algae, bacteria, nematode, protozoa, or virus.</p>
+    <!-- 
+    <header>
+        <h1>Machine Learning Demo Hub</h1>
+    </header> 
+    -->
+    <header class="site-header">
+        <h1 class="site-title">Machine Learning Demo Hub</h1>
+    </header>
 
-    <div id="dropZone">Drag & Drop or Click to Upload</div>
-    <div id="spinner"></div>
-    <div id="result"></div>
 
-    <input type="file" id="fileInput" accept="image/*" style="display:none;">
+    <div class="grid">
+
+        <div class="card">
+            <h2>Microorganism Image Classifier</h2>
+            <p>Identify microscopic organisms such as algae, bacteria, protozoa, viruses, and nematodes.</p>
+            <a class="button" href="./pages/microbe-classifier.html">Launch App →</a>
+        </div>
+
+        <div class="card">
+            <h2>Skin Lesion Detector</h2>
+            <p>Classifies dermoscopic skin images as malignant or benign (coming soon).</p>
+            <a class="button" href="#">Coming Soon</a>
+        </div>
+
+        <div class="card">
+            <h2>Plant Disease Classifier</h2>
+            <p>Detects crop leaf infections and nutrient deficiency patterns (coming soon).</p>
+            <a class="button" href="#">Coming Soon</a>
+        </div>
+
+    </div>
+
+    <!-- ABOUT SECTION -->
+    <div class="section">
+        <h3>About These Models</h3>
+        <p>
+            Each model showcased here was trained using modern deep learning techniques, leveraging convolutional neural
+            networks and curated datasets.
+            The goal of this demo hub is to provide hands-on, visual interactions with machine learning applications in
+            real-world scientific and medical contexts.
+        </p>
+    </div>
+
+    <!-- TECH STACK -->
+    <div class="section">
+        <h3>Tech Stack</h3>
+        <ul>
+            <li>Python + PyTorch + FastAI for model training</li>
+            <li>Gradio + Hugging Face Spaces for app deployment</li>
+            <li>HTML/CSS/JS + GitHub Pages for this site</li>
+            <li>Responsive design with CSS hover + scroll animations</li>
+        </ul>
+    </div>
 
     <script>
-        const dropZone = document.getElementById('dropZone');
-        const fileInput = document.getElementById('fileInput');
-        const resultDiv = document.getElementById('result');
-        const spinner = document.getElementById('spinner');
+        /* Observe cards & info sections for scroll-in animations */
+        const fadeTargets = document.querySelectorAll(".card, .section");
+        const observer = new IntersectionObserver(entries => {
+            entries.forEach(entry => {
+                if (entry.isIntersecting) entry.target.classList.add("visible");
+            });
+        }, { threshold: 0.25 });
 
-        const apiURL = "https://audlang-microbeimageclassifier.hf.space/gradio_api/call/predict";
-
-        // Handle drag/drop
-        dropZone.addEventListener('dragover', (e) => {
-            e.preventDefault();
-            dropZone.classList.add('hover');
-        });
-        dropZone.addEventListener('dragleave', () => dropZone.classList.remove('hover'));
-        dropZone.addEventListener('drop', (e) => {
-            e.preventDefault();
-            dropZone.classList.remove('hover');
-            const file = e.dataTransfer.files[0];
-            if (file) handleFile(file);
-        });
-        dropZone.addEventListener('click', () => fileInput.click());
-        fileInput.addEventListener('change', () => {
-            const file = fileInput.files[0];
-            if (file) handleFile(file);
-        });
-
-        function handleFile(file) {
-            resultDiv.innerHTML = '';
-            spinner.style.display = 'block';
-
-            // Show preview
-            const reader = new FileReader();
-            reader.onload = function (e) {
-                dropZone.innerHTML = `<img src="${e.target.result}" alt="Uploaded Image">`;
-            }
-            reader.readAsDataURL(file);
-
-            // Send to Hugging Face Space API
-            const formData = new FormData();
-            formData.append("data", file);
-
-            fetch(apiURL, {
-                method: "POST",
-                body: formData
-            })
-                .then(res => res.json())
-                .then(json => {
-                    spinner.style.display = 'none';
-                    console.log(json.data)
-                    const data = json.data[0]; // dictionary of {label: probability}
-
-                    // Display bars
-                    resultDiv.innerHTML = '';
-                    for (const [cls, prob] of Object.entries(data)) {
-                        const container = document.createElement('div');
-                        container.className = 'bar-container';
-                        const label = document.createElement('div');
-                        label.className = 'bar-label';
-                        label.textContent = `${cls}: ${(prob * 100).toFixed(1)}%`;
-                        const bar = document.createElement('div');
-                        bar.className = 'bar';
-                        bar.style.width = `${prob * 100}%`;
-                        container.appendChild(label);
-                        container.appendChild(bar);
-                        resultDiv.appendChild(container);
-                    }
-                })
-                .catch(err => {
-                    spinner.style.display = 'none';
-                    resultDiv.innerHTML = 'Error communicating with API';
-                    console.error(err);
-                });
-        }
+        fadeTargets.forEach(el => observer.observe(el));
     </script>
 
 </body>
